--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Weather or not",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha **/*.test.js",
+    "test-watch": "nodemon --exec \"npm test\""
   },
   "repository": {
     "type": "git",
@@ -26,5 +27,9 @@
     "dotenv": "^6.2.0",
     "request": "^2.88.0",
     "yargs": "^12.0.5"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0"
   }
 }
